# FFF

./: .gitignore  CMakeLists.txt
src/fff/: fff.c  fff.h
tests/: fff_TestSuite.cpp
